--- a/index.html
+++ b/index.html
@@ -2,31 +2,28 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Топ-5 моих любимых сериалов - Главная</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-
     <header>
         <h1>Топ-5 моих любимых сериалов</h1>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-        <nav>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="serial1.html">"Дневники вампира"</a></li>
-                <li><a href="serial2.html">"Сверхъестественное"</a></li>
-                <li><a href="serial3.html">"Стрела"</a></li>
-                <li><a href="serial4.html">"Ривердэйл"</a></li>
-                <li><a href="serial5.html">"Сотня"</a></li>
-            </ul>
+        <nav aria-label="breadcrump">
+            <ol class="breadcrump">
+                <li class="breadcrump-item active" aria-current="page">Главная</li>
+                <li class="breadcrump-item"><a href="serial1.html">"Дневники вампира"</a></li>
+                <li class="breadcrump-item"><a href="serial2.html">"Сверхъествественное"</a></li>
+                <li class="breadcrump-item"><a href="serial3.html">"Стрела"</a></li>
+                <li class="breadcrump-item"><a href="serial4.html">"Ривердэйл"</a></li>
+                <li class="breadcrump-item"><a href="serial5.html">"Сотня"</a></li>
+            </ol>
         </nav>
     </header>
-
+    
     <section id="hero">
         <h2>Добро пожаловать в мой личный топ лучших сериалов!</h2>
         <p>Здесь вы найдете небольшое описание моих любимых сериалов. Надеюсь, вам понравится!</p>
