--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             }
 
             formMessage.className = "alert alert-success mt-3";
-            formMessage.textContent = `Привет, ${name}! Спасибо за ваш комментарий. Мы свяжемся с вами по адресу ${email}.`;
+            formMessage.textContent = 'Здравствуйте, ${name}! Спасибо за Ваш комментарий. В данный момент мы не имеем связи с Вашим комментарием, но в скором времени это изменится) Мы свяжемся с Вами по адресу ${email}.`;
 
             document.getElementById("contactForm").reset();
         });
